--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">Weather</string>
+    <string name="app_name">ამინდი</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
-    <string name="title_activity_main">Weather</string>
+    <string name="title_activity_main">ამინდი</string>
     <string name="drawer_open">open</string>
     <string name="drawer_close">close</string>
 </resources>
